# amplifier-module-provider-gemini

./: .gitignore  Makefile  README.md  pyproject.toml
.amplifier/: .gitignore  README.md  settings.yaml
.amplifier/profiles/: gemini-test.md
amplifier_module_provider_gemini/: __init__.py  _cost.py
tests/: __init__.py  test_basic.py  test_behavioral.py  test_close.py  test_completion.py  test_concurrency.py  test_contributor.py  test_conversion.py  test_cost.py  test_cost_usd_json_serializable.py  test_error_details_json.py  test_error_translation.py  test_image_support.py  test_integration.py  test_llm_response_ordering.py  test_pricing_and_vision.py  test_reasoning_effort.py  test_retry.py  test_retry_config_alignment.py  test_shared_retry.py  test_streaming.py  test_thinking.py  test_thought_signature.py  test_thought_signatures.py  test_tool_repair.py  test_tools.py  test_usage_fields.py  test_validation.py  test_verbosity_collapse.py
